@@ -9,6 +9,7 @@ import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpHeaders;
 import org.springframework.security.access.AccessDeniedException;
 import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
@@ -19,8 +20,13 @@ import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.access.AccessDeniedHandler;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+import org.springframework.web.cors.CorsConfiguration;
+import org.springframework.web.cors.CorsConfigurationSource;
+import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.io.IOException;
+import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @RequiredArgsConstructor
@@ -31,7 +37,7 @@ public class SecurityConfig {
 
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity httpSecurity) throws Exception {
-        httpSecurity.cors(Customizer.withDefaults())
+        httpSecurity.cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .httpBasic(httpSecurityHttpBasicConfigurer -> httpSecurityHttpBasicConfigurer.disable())
                 .csrf(httpSecurityCsrfConfigurer -> httpSecurityCsrfConfigurer.disable())
                 .sessionManagement(httpSecuritySessionManagementConfigurer -> httpSecuritySessionManagementConfigurer.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
@@ -57,9 +63,16 @@ public class SecurityConfig {
                 .requestMatchers("/faq/update/**").permitAll() //.hasRole("MANAGER")
                 .requestMatchers("/faq/get/**").permitAll() //.hasRole("MANAGER")
 
+                .requestMatchers("/match/add").permitAll() //.hasRole("MANAGER")
+                .requestMatchers("/match/delete/**").permitAll() //.hasRole("MANAGER")
+                .requestMatchers("/match/update/**").permitAll() //.hasRole("MANAGER")
+                .requestMatchers("/match/get/**").permitAll() //.hasRole("MANAGER")
+
+                .requestMatchers("/rank/team/**").permitAll() //.hasRole("MANAGER")
+
                 .requestMatchers("/login/oauth2/**").permitAll()
                 .requestMatchers("/api/v1/oauth2/google").permitAll()
-                .requestMatchers("/star/**").permitAll()
+                .requestMatchers("/scrape/**").permitAll()
                 .requestMatchers("/mypage/**").permitAll()
                 .requestMatchers("/mypage/update/**").permitAll()
                 .requestMatchers("/team/add/**").permitAll()
@@ -73,12 +86,12 @@ public class SecurityConfig {
                 .anyRequest().denyAll().and()
                 .oauth2Login(oauth2 -> oauth2
                         .loginProcessingUrl("api/v1/oauth2/*")
+                        .loginProcessingUrl("login/oauth2/google/*")
                 )
                 .addFilterBefore(new JWTAuthenticationFilter(jwtProvider), UsernamePasswordAuthenticationFilter.class)
                 .exceptionHandling(httpSecurityExceptionHandlingConfigurer -> httpSecurityExceptionHandlingConfigurer.accessDeniedHandler(
                         (request, response, accessDeniedException) -> {
                             // 권한 문제가 발생했을 때 이 부분을 호출한다.
-
 
                             response.setStatus(403);
                             response.setCharacterEncoding("utf-8");
@@ -96,17 +109,18 @@ public class SecurityConfig {
         return PasswordEncoderFactories.createDelegatingPasswordEncoder();
     }
 
-//    @Bean  -> CORS 에러 발생하면 처리해보기
-//    public CorsConfigurationSource corsConfigurationSource() {
-//        CorsConfiguration config = new CorsConfiguration();
-//
-//        config.setAllowedOrigins(List.of(client));
-//        config.setAllowedMethods(Arrays.asList("POST", "GET", "PUT", "DELETE"));
-//        config.setAllowedHeaders(Arrays.asList(HttpHeaders.AUTHORIZATION, HttpHeaders.CONTENT_TYPE));
-//        config.setAllowCredentials(true);
-//
-//        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-//        source.registerCorsConfiguration("/**", config);
-//        return source;
-//    }
+    @Bean
+    public CorsConfigurationSource corsConfigurationSource() {
+        CorsConfiguration config = new CorsConfiguration();
+
+
+        config.setAllowedOrigins(List.of("http://localhost:3000"));
+        config.setAllowedMethods(Arrays.asList("POST", "GET", "PUT", "DELETE"));
+        config.setAllowedHeaders(Arrays.asList(HttpHeaders.AUTHORIZATION, HttpHeaders.CONTENT_TYPE));
+        config.setAllowCredentials(true);
+
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        source.registerCorsConfiguration("/**", config);
+        return source;
+    }
 }
